--- a/src/app/navbar/navbar.component.html
+++ b/src/app/navbar/navbar.component.html
@@ -15,7 +15,10 @@
           <li class="nav-item">
             <a class="nav-link" routerLink="/userinfo">userinfo</a>
           </li>
-         
+          
+          <li class="nav-item">
+            <a class="nav-link" routerLink="/productlist">productlist</a>
+          </li>
         </ul>
       </div>
     </div>
