--- a/src/app/navbar/navbar.component.html
+++ b/src/app/navbar/navbar.component.html
@@ -19,6 +19,9 @@
           <li class="nav-item">
             <a class="nav-link" routerLink="/productlist">productlist</a>
           </li>
+          <li class="nav-item">
+            <a class="nav-link" routerLink="/userdata">Userdata</a>
+          </li>
         </ul>
       </div>
     </div>
